<resources>
    <string name="app_name">Tips</string>
    <string name="amount">Edit amount</string>
    <string name="amount_hint">Input text</string>
    <string name="percent">15%</string>
    <string name="total">$0.00</string>
    <string name="tip">$0.00</string>
    <string name="label_total">Total</string>
    <string name="label_tip">Tip</string>
    <string name="label_nds">Nds</string>
    <string name="nds_text">$0.0</string>
    <string name="TextTest">Test</string>
    <string name="Test">Testing</string>
    <string name="Name">Fine</string>
    <string name="Grivna">$0.0</string>
</resources>
