<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BD5555"
    android:theme="@style/AppTheme"
    tools:context=".MainActivityCalc">

    <TextView
            android:text="@string/Grivna"
            android:layout_width="135dp"
            android:layout_height="32dp" android:id="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/Test"
            android:layout_marginTop="16dp" app:layout_constraintStart_toEndOf="@+id/textView5"
            android:layout_marginLeft="28dp" android:layout_marginStart="28dp"/>
    <TextView
            android:text="@string/Test"
            android:layout_width="203dp"
            android:layout_height="55dp" android:id="@+id/Test"
            app:layout_constraintTop_toBottomOf="@+id/tv_total"
            android:layout_marginTop="16dp" app:layout_constraintStart_toEndOf="@+id/TextTest"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <EditText
            android:id="@+id/et_amount"
            android:layout_width="278dp"
            android:layout_height="68dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/amount_hint"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:textColor="@android:color/black"
            android:textColorHighlight="@android:color/holo_red_light"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toTopOf="@+id/sb_percent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.941"/>

    <SeekBar
            android:id="@+id/sb_percent"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="208dp"
            android:layout_height="37dp"
            android:layout_marginTop="88dp"
            android:indeterminate="false"
            android:max="20"
            android:progress="15"
            android:scrollbarStyle="insideOverlay"
            android:theme="@style/AppTheme"
            app:layout_constraintEnd_toEndOf="@+id/et_amount"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/et_amount"
            app:layout_constraintTop_toTopOf="parent"
            app:tickMarkTint="@android:color/black"
            app:tickMarkTintMode="multiply"/>

    <TextView
        android:id="@+id/tv_percent"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:width="60dp"
        android:text="@string/percent"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/sb_percent"
        app:layout_constraintEnd_toStartOf="@+id/sb_percent"
        app:layout_constraintTop_toTopOf="@+id/sb_percent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
            android:id="@+id/tv_label_total"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:width="60dp"
            android:text="@string/label_total"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="@+id/tv_total"
            app:layout_constraintEnd_toStartOf="@+id/tv_total"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.833"/>
    <TextView
            android:id="@+id/tv_label_tip"
            android:layout_width="59dp"
            android:layout_height="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:width="60dp"
            android:text="@string/label_tip"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="@+id/tv_tip"
            app:layout_constraintEnd_toStartOf="@+id/tv_tip"
            app:layout_constraintTop_toBottomOf="@+id/tv_percent"
            app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:id="@+id/tv_tip"
            android:layout_width="211dp"
            android:layout_height="31dp"
            android:layout_marginTop="12dp"
            android:width="305dp"
            android:height="40dp"
            android:text="@string/tip"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="@+id/sb_percent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/sb_percent"
            app:layout_constraintTop_toBottomOf="@+id/sb_percent"/>

    <TextView
            android:id="@+id/tv_total"
            android:layout_width="202dp"
            android:layout_height="56dp"
            android:layout_marginTop="76dp"
            android:width="305dp"
            android:height="40dp"
            android:text="@string/total"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="@+id/tv_tip"
            app:layout_constraintHorizontal_bias="0.375"
            app:layout_constraintStart_toStartOf="@+id/tv_nds"
            app:layout_constraintTop_toBottomOf="@+id/tv_tip"/>
    <TextView
            android:text="@string/label_nds"
            android:layout_width="65dp"
            android:layout_height="39dp" android:id="@+id/textView"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_tip"
            app:layout_constraintEnd_toStartOf="@+id/tv_nds"/>
    <TextView
            android:text="@string/nds_text"
            android:layout_width="201dp"
            android:layout_height="46dp" android:id="@+id/tv_nds"
            app:layout_constraintStart_toEndOf="@+id/tv_label_tip" android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp" android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_tip"/>
    <TextView
            android:text="@string/TextTest"
            android:layout_width="75dp"
            android:layout_height="53dp" android:id="@+id/TextTest"
            tools:layout_editor_absoluteX="16dp" app:layout_constraintTop_toBottomOf="@+id/tv_label_total"
            android:layout_marginTop="24dp"/>
    <TextView
            android:text="@string/Name"
            android:layout_width="72dp"
            android:layout_height="24dp" android:id="@+id/textView5"
            tools:layout_editor_absoluteX="20dp" app:layout_constraintTop_toBottomOf="@+id/TextTest"
            android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>